--- a/contact.html
+++ b/contact.html
@@ -202,7 +202,7 @@
                         result
                       </h2>
                       <h2 class="section-title mobile_view">
-                        <span>contact</span>
+                        <span>Contact</span>
                       us for more details
                       </h2>
                     </div>
