header menu remove

--- a/about.html
+++ b/about.html
@@ -265,8 +265,8 @@
             <ul>
               <li><a href="/">Product</a>
               </li>
-              <li><a href="contact.html">Blogs</a></li>
-              <li><a href="contact.html">News In Press</a></li>
+              <!-- <li><a href="contact.html">Blogs</a></li> -->
+              <!-- <li><a href="contact.html">News In Press</a></li> -->
               <li><a href="about.html">About</a></li>
             </ul>
           </nav>
@@ -339,7 +339,7 @@
 
               <div class="card">
                 <a href="https://www.linkedin.com/in/syed-shaaz-548950bb" target="_blank"><img
-                    src="./assets/imgs/founder/Syed.jpeg" />
+                    src="./assets/imgs/founder/Vikas.jpeg" />
                   <div class="info">
                     <p class="fw-bold fs-6">Ex-CEO & Founder, FTL</p>
                     <p>Shaaz is a tech entrepreneur and public speaker specializing in the AI/ML domain. He has authored
@@ -352,7 +352,7 @@
               </div>
               <div class="card">
                 <a href="https://www.linkedin.com/in/vikas-bansal-5576683" target="_blank"><img
-                    src="./assets/imgs/founder/Vikas.jpeg" />
+                    src="./assets/imgs/founder/Syed.jpeg" />
                   <div class="info">
                     <p class="fw-bold fs-6">Ex-CHRO Edelweiss, Unilever, Dr. Reddy’s</p>
                     <p>Vikas is an HR veteran with 24 years of experience in the industry. He has managed diverse
@@ -395,8 +395,8 @@
               <div class="footer-widget-wrapper mobile-box-center">
                 <h2 class="title text-white">Company</h2>
                 <ul class="footer-nav-list mobile-box-center">
-                  <li><a href="contact.html">Blogs</a></li>
-                  <li><a href="contact.html">News In Press</a></li>
+                  <!-- <li><a href="contact.html">Blogs</a></li> -->
+                  <!-- <li><a href="contact.html">News In Press</a></li> -->
                   <li><a href="/about.html">About</a></li>
                   <li><a href="/contact.html">Contact</a></li>
                 </ul>
