--- a/contact.html
+++ b/contact.html
@@ -118,8 +118,8 @@
             <ul>
               <li ><a href="/">Product</a>
               </li>
-              <li><a href="contact.html">Blogs</a></li>
-              <li><a href="contact.html">News In Press</a></li>
+              <!-- <li><a href="contact.html">Blogs</a></li> -->
+              <!-- <li><a href="contact.html">News In Press</a></li> -->
               <li><a href="about.html">About</a></li>
             </ul>
           </nav>
@@ -275,8 +275,8 @@
               <div class="footer-widget-wrapper mobile-box-center">
                 <h2 class="title text-white">Company</h2>
                 <ul class="footer-nav-list mobile-box-center">
-                  <li><a href="contact.html">Blogs</a></li>
-                  <li><a href="contact.html">News In Press</a></li>
+                  <!-- <li><a href="contact.html">Blogs</a></li> -->
+                  <!-- <li><a href="contact.html">News In Press</a></li> -->
                   <li><a href="/about.html">About</a></li>
                   <li><a href="/contact.html">Contact</a></li>
                 </ul>
