--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
             <ul>
               <li><a href="/">Product</a>
               </li>
-              <li><a href="contact.html">Blogs</a></li>
-              <li><a href="contact.html">News In Press</a></li>
+              <!-- <li><a href="contact.html">Blogs</a></li> -->
+              <!-- <li><a href="contact.html">News In Press</a></li> -->
               <li><a href="about.html">About</a></li>
             </ul>
           </nav>
@@ -174,11 +174,11 @@
                   </div> -->
                   <div class="btn-wrapper has_fade_anim mobile-padding-top" data-delay="0.45">
                     <a href="#" class="wc-btn wc-btn-primary btn-text-flip primary-bg"> <span
-                        data-text="Coming Soon">Coming Soon</span></a>
-                    <a href="/contact.html" class="wc-btn wc-btn-primary bg-transparent border-0 enquiry-btn"> <span
+                        data-text="Get In Touch">Get In Touch</span></a>
+                    <!-- <a href="/contact.html" class="wc-btn wc-btn-primary bg-transparent border-0 enquiry-btn"> <span
                         data-text="Get In Touch">
                         Get In
-                        Touch <i class="fa-solid fa-arrow-up" style="transform: rotate(30deg);"></i></span></a>
+                        Touch <i class="fa-solid fa-arrow-up" style="transform: rotate(30deg);"></i></span></a> -->
                   </div>
 
                 </div>
@@ -396,8 +396,8 @@
               <div class="footer-widget-wrapper mobile-box-center">
                 <h2 class="title">Company</h2>
                 <ul class="footer-nav-list mobile-box-center">
-                  <li><a href="contact.html">Blogs</a></li>
-                  <li><a href="contact.html">News In Press</a></li>
+                  <!-- <li><a href="contact.html">Blogs</a></li> -->
+                  <!-- <li><a href="contact.html">News In Press</a></li> -->
                   <li><a href="/about.html">About</a></li>
                   <li><a href="/contact.html">Contact</a></li>
                 </ul>
