--- a/about.html
+++ b/about.html
@@ -223,8 +223,8 @@
     <div class="offcanvas-area-menu-wrapper">
       <ul id="accordion" class="accordion">
         <li><a href="/">Product</a></li>
-        <li><a href="contact.html">Blogs</a></li>
-        <li><a href="contact.html">News In Press</a></li>
+        <!-- <li><a href="contact.html">Blogs</a></li> -->
+        <!-- <li><a href="contact.html">News In Press</a></li> -->
         <li><a href="about.html">About</a></li>
       </ul>
     </div>
@@ -254,7 +254,7 @@
     <div class="container">
       <div class="header-area__inner">
         <div class="header__logo">
-          <a href="index.html" class="text-black" style="font-size: 28px;font-weight: 400;">
+          <a href="index.html" class="" style="font-size: 28px;font-weight: 400;">
             <span style="color: #6BE4AB;font-size: 30px;" class="fw-bold company-letter">T</span>alAura
             <!-- <img src="assets/imgs/logo/logo-2.webp" class="normal-logo" alt="Site Logo">
             <img src="assets/imgs/logo/logo-13.webp" class="sticky-logo" alt="Site Logo"> -->
