--- a/blog.html
+++ b/blog.html
@@ -116,8 +116,8 @@
             <ul>
               <li ><a href="/">Product</a>
               </li>
-              <li><a href="contact.html">Blogs</a></li>
-              <li><a href="contact.html">News In Press</a></li>
+              <!-- <li><a href="contact.html">Blogs</a></li> -->
+              <!-- <li><a href="contact.html">News In Press</a></li> -->
               <li><a href="about.html">About</a></li>
             </ul>
           </nav>
