--- a/contact.html
+++ b/contact.html
@@ -76,8 +76,8 @@
     <div class="offcanvas-area-menu-wrapper">
       <ul id="accordion" class="accordion">
         <li><a href="/">Product</a></li>
-        <li><a href="contact.html">Blogs</a></li>
-        <li><a href="contact.html">News In Press</a></li>
+        <!-- <li><a href="contact.html">Blogs</a></li> -->
+        <!-- <li><a href="contact.html">News In Press</a></li> -->
         <li><a href="about.html">About</a></li>
       </ul>
     </div>
