--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     <div class="offcanvas-area-menu-wrapper">
       <ul id="accordion" class="accordion">
         <li><a href="/">Product</a></li>
-        <li><a href="contact.html">Blogs</a></li>
-        <li><a href="contact.html">News In Press</a></li>
+        <!-- <li><a href="contact.html">Blogs</a></li> -->
+        <!-- <li><a href="contact.html">News In Press</a></li> -->
         <li><a href="about.html">About</a></li>
       </ul>
     </div>
@@ -172,7 +172,7 @@
                       you to focus more on your business
                       or simply enjoy your newfound free time.</p>
                   </div> -->
-                  <div class="btn-wrapper has_fade_anim mobile-padding-top" data-delay="0.45">
+                  <div class="btn-wrapper has_fade_anim mobile-padding-top mobile-center" data-delay="0.45">
                     <a href="#" class="wc-btn wc-btn-primary btn-text-flip primary-bg"> <span
                         data-text="Get In Touch">Get In Touch</span></a>
                     <!-- <a href="/contact.html" class="wc-btn wc-btn-primary bg-transparent border-0 enquiry-btn"> <span
