index page changes

--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
   <!-- search modal end -->
 
   <!-- Header area start -->
-  <header class="header-area style-1 pos-abs zi-9">
+  <header class="header-area style-1 pos-abs zi-9 index">
     <div class="container">
       <div class="header-area__inner">
         <div class="header__logo">
           <a href="index.html" class="text-black" style="font-size: 28px;font-weight: 400;">
-            <span style="color: #6BE4AB;font-size: 30px;" class="fw-bold company-letter">T</span>alAura
+            <span style="color: #6BE4AB;font-size: 30px;" class="fw-bold company-letter company-letter-index">T</span>alAura
             <!-- <img src="assets/imgs/logo/logo-2.webp" class="normal-logo" alt="Site Logo">
             <img src="assets/imgs/logo/logo-13.webp" class="sticky-logo" alt="Site Logo"> -->
           </a>
