--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
           <main>
             <!-- hero area start  -->
-            <section class="hero-area section-spacing">
+            <section class="hero-area section-spacing padding-hero-bottom">
               <div class="container">
                 <div class="hero-area-inner">
                   <img
