--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
               <div class="container">
                 <div class="features-area-inner">
                   <div
-                    class="section-header mobile-margin-top-forty mobile-margin-bottom"
+                    class="section-header mobile-margin-top-forty mobile-margin-bottom mb-4"
                   >
                     <div class="section-title-wrapper">
                       <div class="title-wrapper">
@@ -555,11 +555,18 @@
                          <br/>
 Interviewer: conducting accurate assessments
                         </h2>
-                        <!-- <p>AI Hiring and Assessments: Hire a better fit with standardised and unbaised hiring, with 70% lower Tats</p> -->
+                        <p class="text-white mt-4">AI Hiring and Assessments: Hire a better fit with standardised and unbaised hiring, with 70% lower Tats</p>
                       </div>
                     </div>
                   </div>
-                  <div class="section-content">
+                  <div class="contianer d-flex justify-content-center align-items-center">
+                     <img
+                        src="assets/imgs/gallery/Group 289438.png"
+                        alt="feature image"
+                        class="img-fluid desktop_image"
+                      />
+                  </div>
+                  <!-- <div class="section-content" style="width: 100%;">
                     <div
                       class="accordion-wrapper has_fade_anim d-flex justify-content-center align-items-center"
                     >
@@ -691,13 +698,15 @@ Interviewer: conducting accurate assessments
                     </div>
                     <div
                       class="feature-thumb has_fade_anim mobile-margin-bottom-fifty"
+                      style="width: 100%;"
                     >
                       <img
                         src="assets/imgs/gallery/Group 289438.png"
                         alt="feature image"
+                        class="img-fluid"
                       />
                     </div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </section>
