--- a/about.html
+++ b/about.html
@@ -433,20 +433,19 @@
                   </div>
                   <div class="description-text">
                     <div class="text-wrapper">
-                      <p class="text mobile-text-center">
-                        TalAura is a sales-tech start up, enabling offline
-                        retail sales with AI based solutions.
+                     <p class="text mobile-text-center">
+                       TalAura is a sales-tech and talent enablement startup, offering deep analytical information using conversational intelligence.
                       </p>
                     </div>
                   </div>
                 </div>
-                <div class="footer-widget-wrapper">
+                <div class="footer-widget-wrapper mobile-box-center">
                   <h2 class="title text-white">Address</h2>
                   <div class="description-text">
                     <div class="text-wrapper">
                       <p class="text mobile-text-center">
                         D- 141, Dlf Crest, Golf Course Rd, Dlf Ph 5, Galleria
-                        Dlf-iv, Gurgaon, Haryana, India, 122009
+                        Dlf-iv, Gurugram, Haryana, India, 122009
                       </p>
                     </div>
                   </div>
@@ -458,8 +457,8 @@
                     <!-- <li><a href="contact.html">News In Press</a></li> -->
                     <li><a href="/about.html">About Us</a></li>
                     <li><a href="/contact.html">Contact</a></li>
-                    <li><a href="#">Terms & Conditions</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
+                    <!-- <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="#">Privacy Policy</a></li> -->
                   </ul>
                 </div>
 
