--- a/contact.html
+++ b/contact.html
@@ -181,7 +181,7 @@
                         </h1>
                       </div>
                     </div>
-                    <div
+                    <!-- <div
                       class="shape has_fade_anim"
                       data-fade-from="left"
                       data-delay="0.30"
@@ -190,15 +190,15 @@
                         src="assets/imgs/shape/shape-s-56.webp"
                         alt="shape image"
                       />
-                    </div>
-                    <div class="text-wrapper">
+                    </div> -->
+                    <!-- <div class="text-wrapper">
                       <p
                         class="text has_fade_anim desktop_view"
                         data-delay="0.45"
                       >
                         To bring visibility to your sales floor
                       </p>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
@@ -257,12 +257,12 @@
                       <ul>
                         <li>
                           <a href="mailto:inquiry@binox.com"
-                            >inquiry@talaura.ai</a
+                            >sales@talaura.ai</a
                           >
                         </li>
                         <li>
-                          D- 141, DLF Crest, Golf Course Rd, DLF Ph 5 Galleria
-                          DLF-IV, Gurgaon Haryana 122009
+                          D- 141, Dlf Crest, Golf Course Rd, Dlf Ph 5, Galleria
+                        Dlf-iv, Gurugram, Haryana, India, 122009
                         </li>
                       </ul>
                     </div>
@@ -333,33 +333,34 @@
 
                   <div class="description-text">
                     <div class="text-wrapper">
-                      <p class="text mobile-text-center">
-                        TalAura is a sales-tech start up, enabling offline
-                        retail sales with AI based solutions.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="footer-widget-wrapper">
-                  <h2 class="title text-white">Address</h2>
-                  <div class="description-text">
-                    <div class="text-wrapper">
-                      <p class="text mobile-text-center">
-                        D- 141, Dlf Crest, Golf Course Rd, Dlf Ph 5, Galleria
-                        Dlf-iv, Gurgaon, Haryana, India, 122009
+                                           <p class="text mobile-text-center">
+                       TalAura is a sales-tech and talent enablement startup, offering deep analytical information using conversational intelligence.
                       </p>
                     </div>
                   </div>
                 </div>
                 <div class="footer-widget-wrapper mobile-box-center">
-                  <h2 class="title text-white">Company</h2>
+                  <h2 class="title text-white mobile-center pt-2 fs-6 mobile-text-center">TALAURA TECHNOLOGIES PRIVATE LIMITED</h2>
+                  <div class="description-text">
+                    <div class="text-wrapper">
+                      <p class="text mobile-text-center">
+                          D- 141, Dlf Crest, Golf Course Rd, Dlf Ph 5, Galleria Dlf-iv,
+                          <br/>Gurugram, Haryana, India, 122009
+                        </p>
+                        <p class="text mobile-text-center" style="font-size: 16px;">Phone No: +919810215980</p>
+                        <p class="text mobile-text-center" style="font-size: 16px;">Email: sales@talaura.ai</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="footer-widget-wrapper mobile-box-center">
+                  <h2 class="title text-white" style="font-size: 28px; font-weight: 500">Company</h2>
                   <ul class="footer-nav-list mobile-box-center">
                     <!-- <li><a href="contact.html">Blogs</a></li> -->
                     <!-- <li><a href="contact.html">News In Press</a></li> -->
                     <li><a href="/about.html">About Us</a></li>
                     <li><a href="/contact.html">Contact</a></li>
-                    <li><a href="#">Terms & Conditions</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
+                    <!-- <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="#">Privacy Policy</a></li> -->
                   </ul>
                 </div>
 
