--- a/index.html
+++ b/index.html
@@ -200,8 +200,7 @@
                     </div>
                     <div class="text-wrapper">
                       <p class="text has_fade_anim mobile-text-center mobile-margin-top" data-delay="0.30">
-                        TalAura is a sales-tech start up, enabling offline
-                        retail sales with conversational intelligence.
+                        TalAura is a sales-tech and talent enablement startup, offering deep analytical information using conversational intelligence.
                       </p>
                     </div>
                     <div
@@ -739,8 +738,7 @@ Interviewer: conducting accurate assessments
                   <div class="description-text">
                     <div class="text-wrapper">
                       <p class="text mobile-text-center">
-                        TalAura is a sales-tech start up, enabling offline
-                        retail sales with AI based solutions.
+                       TalAura is a sales-tech and talent enablement startup, offering deep analytical information using conversational intelligence.
                       </p>
                     </div>
                   </div>
@@ -751,7 +749,7 @@ Interviewer: conducting accurate assessments
                     <div class="text-wrapper">
                       <p class="text mobile-text-center">
                         D- 141, Dlf Crest, Golf Course Rd, Dlf Ph 5, Galleria
-                        Dlf-iv, Gurgaon, Haryana, India, 122009
+                        Dlf-iv, Gurugram, Haryana, India, 122009
                       </p>
                     </div>
                   </div>
@@ -763,8 +761,8 @@ Interviewer: conducting accurate assessments
                     <!-- <li><a href="contact.html">News In Press</a></li> -->
                     <li><a href="/about.html">About Us</a></li>
                     <li><a href="/contact.html">Contact</a></li>
-                    <li><a href="#">Terms & Conditions</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
+                    <!-- <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="#">Privacy Policy</a></li> -->
                   </ul>
                 </div>
               </div>
