--- a/index.html
+++ b/index.html
@@ -744,18 +744,20 @@ Interviewer: conducting accurate assessments
                   </div>
                 </div>
                 <div class="footer-widget-wrapper mobile-box-center">
-                  <h2 class="title">Address</h2>
+                  <h2 class="title mobile-center pt-2 fs-6 mobile-text-center">TALAURA TECHNOLOGIES PRIVATE LIMITED</h2>
                   <div class="description-text">
                     <div class="text-wrapper">
                       <p class="text mobile-text-center">
-                        D- 141, Dlf Crest, Golf Course Rd, Dlf Ph 5, Galleria
-                        Dlf-iv, Gurugram, Haryana, India, 122009
-                      </p>
+                          D- 141, Dlf Crest, Golf Course Rd, Dlf Ph 5, Galleria Dlf-iv,
+                          <br/>Gurugram, Haryana, India, 122009
+                        </p>
+                        <p class="text mobile-text-center" style="font-size: 16px;">Phone No: +919810215980</p>
+                        <p class="text mobile-text-center" style="font-size: 16px;">Email: sales@talaura.ai</p>
                     </div>
                   </div>
                 </div>
                 <div class="footer-widget-wrapper mobile-box-center">
-                  <h2 class="title">Company</h2>
+                  <h2 class="title" style="font-size: 28px; font-weight: 500">Company</h2>
                   <ul class="footer-nav-list mobile-box-center">
                     <!-- <li><a href="contact.html">Blogs</a></li> -->
                     <!-- <li><a href="contact.html">News In Press</a></li> -->
